
 * Removed TemplateMixin specific code from ATContentType base class. It was
   moved to TemplateMixin some time ago. [tiran]

 * Better error reporting for migration errors [tiran]

 * Fixed migration problem when LinguaPlone was installed [tiran]

 * Added - as valid char for ids [tiran]

 * Reindex only Type, portal_type and meta_type in switching script [tiran]

0.2-beta6 - 2004-06-20

 * Added max upload size validator to ATFile and ATImage [tiran]

 * Changed permission for download tab an ATFile. Dont confuse the average
   user with the green edit frame [jensens]
   
 * Added a new class ATCTFileContent which contains some code for ATFile
   and ATImage [tiran]
   
 * Set title from the filename of an uploaded file (ATImage, ATFile) [tiran]
 
 * Added limit for ATTopic [gotcha]
 
 * Added EditableBody method to ATDocument [tiran]

 * Added validation of Criterion support for a specific index [gotcha]

 * Added edit() methods for backward compatibility to CMF 

 * Added restrained folder support. [jensens]

 * Disabled restrained folder support until it's fixed. [tiran]

0.2-beta5

 * Fixed multiple small bugs and added features requested in the bug
   tracker on sf.net [tiran]
 
 * Auto set id from filename for ATImage and ATFile
 
 * Fixed python 2.1 compatibility problem with CMFCore/WorkflowTool. Thx to
   Tiziano Lattisi [tiran]

 * Moved to validation chains [tiran]
 
 * Fixed security of HistoryAwareMixin [tiran]
 
 * Added iCal/vCal export to AT Event [tiran]
  
 * Added PloneLingua support [gotcha]

0.2-beta4

 * Added AT Dyn Document. It's a CMFDynamicDocument like type that supports
   rendering of TAL inside the body text.
   [tiran]

 * Moved AT Dyn Document to a new product [tiran]

 * Fixed the migration [tiran]
 
 * Fixed and improved the switch from/to "ATCT as default types" methods [tiran]
 
 * Updated docs [tiran]
 
 * Moved helper methods to utils [tiran]
 
 * Switch objects in content_type_registry, too [lelit]
  