@@ -3,7 +3,7 @@
 common includes a set of basic things that every test needs. Ripped of from my
 Archetypes test suit
 
-$Id: common.py,v 1.7 2004/06/13 21:49:19 tiran Exp $
+$Id: common.py,v 1.8 2004/06/24 19:47:12 tiran Exp $
 """
 
 __author__ = 'Christian Heimes'
@@ -15,6 +15,8 @@ try:
 except NameError: # python 2.1
     True  = 1
     False = 0
+
+import time
 
 def Xprint(s):
     """print helper
