@@ -2,7 +2,7 @@
 
 Use this file as a skeleton for your own tests
 
-$Id: testATLink.py,v 1.7 2004/06/13 21:49:19 tiran Exp $
+$Id: testATLink.py,v 1.8 2004/06/24 19:47:12 tiran Exp $
 """
 
 __author__ = 'Christian Heimes'
@@ -83,9 +83,9 @@ class TestSiteATLink(ATCTSiteTestCase):
 
         migrated = getattr(self._portal, id)
 
-        self.compareAfterMigration(migrated)
-        self.compareDC(migrated, title=title, description=description, mod=mod,
-                       created=created)
+        self.compareAfterMigration(migrated, mod=mod, created=created)
+        self.compareDC(migrated, title=title, description=description)
+
                        
         # XXX more
 
@@ -106,12 +106,7 @@ class TestATLinkFields(ATCTFieldTestCase):
 
     def afterSetUp(self):
         ATCTFieldTestCase.afterSetUp(self)
-        self._dummy = ATLink.ATLink(oid='dummy')
-        self._dummy.initializeArchetype()
-        # wrap dummy object in the acquisition context of the site
-        site = self.getPortal()
-        self._dummy = self._dummy.__of__(site)
-        # more
+        self._dummy = self.createDummy(klass=ATLink.ATLink)
 
     def test_remoteUrlField(self):
         dummy = self._dummy
